# astute-project

./: README.md
astute-dashboard/: AUTHORS  ChangeLog  MANIFEST.in  setup.cfg
astute-dashboard/astutedashboard/: common.py
astute-dashboard/astutedashboard/dashboards/admin/instances/: tables.py  urls.py  views.py
astute-dashboard/astutedashboard/dashboards/admin/volumes/: tabs.py  urls.py  views.py
astute-dashboard/astutedashboard/dashboards/billing/: dashboard.py
astute-dashboard/astutedashboard/dashboards/billing/config/: forms.py  panel.py  tables.py  tabs.py  urls.py  views.py
astute-dashboard/astutedashboard/dashboards/billing/discounts/: forms.py  panel.py  tables.py  urls.py  views.py
astute-dashboard/astutedashboard/dashboards/billing/image_report/: panel.py  tables.py  urls.py  views.py
astute-dashboard/astutedashboard/dashboards/billing/invoices/: forms.py  (+4 more)
astute-dashboard/astutedashboard/enabled/: _1420_astute_project_network_topology_panel.py  _2060_astute_admin_instances_panel.py  _2070_astute_admin_volumes_panel.py  _31010_project_billing_group.py  _31020_project_cust_invoices_panel.py  _31030_project_sub_plans_panel.py  _31040_project_avbl_plans_panel.py  _8005_astute_billing.py  _8010_astute_admin_panel_group.py  _8020_astute_admin_config_panel.py  _8030_astute_admin_type_mappings_panel.py  _8040_astute_admin_plan_mappings_panel.py  _8050_astute_admin_invoices_panel.py  _8060_astute_admin_discounts_panel.py  _8080_astute_project_instances_panel.py  _8090_astute_project_volumes_panel.py  _8150_astute_admin_image_usage_report_panel.py
(+98 files in other folders)
