[metadata]
name = astute-dashboard
summary = Astute Billing Horizon dashboard
description-file =
    README.rst
author = NephoScale
author-email = astute@nephoscale.com
home-page = http://www.nephoscale.com
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    astutedashboard

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = astutedashboard/locale
domain = astute-dashboard

[update_catalog]
domain = astute-dashboard
output_dir = astutedashboard/locale
input_file = astutedashboard/locale/astute-dashboard.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = astutedashboard/locale/astute-dashboard.pot
